# DeepPySR

./: .gitignore  README.md  demo_usage.py  generate_scripts.sh  notes.md  pyproject.toml  rawlvl0.py  rawlvl1.py  setup.py  symbolic_graph_pysr.py
DeepPySR/: __init__.py  kan_regressor.py  regressor.py  setup.py  utils.py
archive/: rawlvl0.py  rawlvl2.py
archiveb/: kanlayer.py  rawlvl1.py  rawlvl3.py
deepPySR.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
demo/: category_demo.py  demo_usage.py
l3_v11_s1000/: relationships.csv
l3_v15_easy/: relationships.csv
paper/: main.tex
scripts/: bmi.out  fix_julia_manifest.py  generate_lipids_bp_scripts.sh  notes.md  pgs.sh  run_bmi.sh  run_bmi1.sh  run_bmi_age10_vps25.sh  run_bmi_age10_vps50.sh  run_bmi_age10_vps75.sh  run_bmi_age14_vps25.sh  run_bmi_age14_vps50.sh  run_bmi_age14_vps75.sh  run_bmi_age17_vps25.sh  run_bmi_age17_vps50.sh  run_bmi_age17_vps75.sh  run_bmi_age20_vps25.sh  run_bmi_age20_vps50.sh  run_bmi_age20_vps75.sh  run_bmi_age23_vps25.sh  run_bmi_age23_vps50.sh  run_bmi_age23_vps75.sh  run_bmi_age27_vps25.sh  run_bmi_age27_vps50.sh  run_bmi_age27_vps75.sh  run_bmi_age8_vps25.sh  run_bmi_age8_vps50.sh  run_bmi_age8_vps75.sh  run_bmi_baselines_age10.sh  run_bmi_baselines_age14.sh  run_bmi_baselines_age17.sh  run_bmi_baselines_age20.sh  run_bmi_baselines_age23.sh  run_bmi_baselines_age27.sh  run_bmi_baselines_age8.sh  run_bmi_baselines_long.sh  run_bmi_long_vps25.sh  run_bmi_long_vps50.sh  run_bmi_long_vps75.sh  run_bodyfat.sh  (+74 more)
test/: aggregated_results.csv  analysis.py  analysis_utils.py  (+9 more)
(+1678 files in other folders)
