[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepPySR"
version = "0.1.0"
authors = [
    {name = "FulingChen"},
]
description = "A deep symbolic regression package based on PySR"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pysr",
    "numpy",
    "sympy",
    "matplotlib",
    "networkx",
    "pandas",
    "pycirclize",
    "torch",
    "pykan"
]

[project.urls]
"Homepage" = "https://github.com/ICRAR/DeepPySR"
